--- a/web/core/templates/core/index.html
+++ b/web/core/templates/core/index.html
@@ -193,7 +193,7 @@
     <header class="site-header">
       <div class="brand">
         <img src="{% static 'assets/logo.png' %}" alt="C4rr13rX insignia" />
-        <h1>C4rr13rX • Mission Control</h1>
+        <h1>R3V3N!R • C@$h Fl0w Hub</h1>
       </div>
       {% if user.is_authenticated %}
         <span class="user-chip">Logged in as {{ user.get_username }}</span>
@@ -253,7 +253,7 @@
               Password
               {{ auth_form.password }}
             </label>
-            <button type="submit">Enter Mission Control</button>
+            <button type="submit">Access R3V3N!R</button>
           </form>
         </section>
       </main>
