still working on getting the GUI right

--- a/web/core/templates/core/index.html
+++ b/web/core/templates/core/index.html
@@ -258,7 +258,7 @@
     {% if initial_route != "branddozer_solo" %}
       <header class="site-header">
         <div class="brand">
-          <img src="{% static 'assets/logo.png' %}" alt="C4rr13rX insignia" />
+          <img src="{% static 'assets/main_logo.png' %}" alt="R3V3N!R insignia" />
           <h1>R3V3N!R • Crypto Trading AI Bot</h1>
         </div>
         {% if user.is_authenticated %}
